--- a/HCM_Flood_Level/WebAPI/WebAPI.csproj
+++ b/HCM_Flood_Level/WebAPI/WebAPI.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Program.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
